# Lattice

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  log.md
docs/: README.md  architecture.mmd
examples/: README.md  cluster.rs
proto/: kv.proto  raft.proto
src/: config.rs  lib.rs  main.rs  observability.rs
src/kv/: batch.rs  mod.rs  service.rs
src/raft/: binary_log.rs  config.rs  log.rs  mod.rs  node.rs  peer.rs  snapshot.rs  state.rs
tests/: integration_test.rs
